--- a/src/app/client/angular.json
+++ b/src/app/client/angular.json
@@ -51,7 +51,7 @@
               },
               {
                 "glob": "**/*.*",
-                "input": "./node_modules/@project-sunbird/discussions-ui/assets",
+                "input": "./node_modules/compass-discussions-ui-v8/assets",
                 "output": "./assets/discussion-ui"
               },
               {
@@ -84,7 +84,7 @@
               "./node_modules/compass-sb-themes/themes/themes-portal.scss",
               "node_modules/videojs-http-source-selector/dist/videojs-http-source-selector.css",
               "node_modules/@project-sunbird/sunbird-video-player-v9/lib/assets/videojs.markers.min.css",
-              "./node_modules/@project-sunbird/discussions-ui/assets/styles/global.scss"
+              "./node_modules/compass-discussions-ui-v8/assets/styles/global.scss"
             ],
             "stylePreprocessorOptions": {
               "includePaths": [
