Insights dashboard api code modifications

--- a/src/app/resourcebundles/data/creation/en.properties
+++ b/src/app/resourcebundles/data/creation/en.properties
@@ -384,3 +384,14 @@ frmelmnts.editProfile.tab.personalDetails = Personal details
 frmelmnts.editProfile.tab.academics = Academics
 frmelmnts.editProfile.tab.professionalDetails = Professional details
 frmelmnts.editProfile.tab.certificationNskills = Certification and skills
+
+#Insights Dashboard
+frmelmnts.workspace.draft = Draft
+frmelmnts.workspace.review = On Review
+frmelmnts.workspace.live = Live
+frmelmnts.workspace.insight = Insight
+frmelmnts.workspace.create = Create
+frmelmnts.workspace.course = Course
+frmelmnts.workspace.assessment = Assessments
+frmelmnts.workspace.questionset = Question Set
+frmelmnts.workspace.resource = Resource
