--- a/src/app/resourcebundles/data/consumption/hi.properties
+++ b/src/app/resourcebundles/data/consumption/hi.properties
@@ -1533,6 +1533,9 @@ messages.smsg.m0061=आपका कंटेंट निरीक्षण क
 messages.smsg.m0062=कंटेन्ट अस्वीकार किया गया
 messages.smsg.m0063=कंटेंट सफलतापूर्वक प्रकाशित किया गया
 messages.smsg.m0064=कंटेंट सफलतापूर्वक हटा दिया गया
+messages.smsg.m0067=अमान्य फ़ोन प्रारूप. कृपया एक वैध फोन नंबर दर्ज करें
+messages.smsg.m0068=फ़ोन पहले से मौजूद है. कृपया किसी भिन्न फ़ोन नंबर का उपयोग करें
+messages.smsg.m0069=कृपया सभी अपेक्षित फ़ील्ड को भरें
 messages.smsg.moo41=घोषणाएं सफलतापूर्वक रद्ध की गयी
 messages.smsg.promoteAsAdmin={memberName} समूह एडमिन हैं
 messages.smsg.removeMember={memberName} अब समूह सदस्य नहीं हैं
